
	* common/src/Makefile.am: Update for new freeipmi-argp lib.

	* configure.ac: Update with lib argp checking and argp.h.

	* Update all tools and libraries to load argp.h or freeipmi-argp.h
	respectively.

	* Include alloca.h in all files as needed.

	* common/src/pstdout.c: Rename internal variables stdout and
	stderr to p_stdout and p_stderr as needed.

	* General cleanup for portability, do not load unnecessary .h
	files, remove unneeded .h files, etc.
	
2008-06-05  Albert Chu <chu11@llnl.gov>

	* configure.ac: Tweak gethostbyname_r logic.
	
2008-06-04  Albert Chu <chu11@llnl.gov>

	* config/ac_gethostbyname_r.m4: Remove file.

	* configure.ac: Add alternate gethostbyname_r checks that work on
	Solaris.  Remove legacy check for program_invocation_short_name.
	
2008-06-04  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/ipmi-sensors-display-common.c
	(ipmi_sensors_get_thresholds): Special case completion code
	IPMI_COMP_CODE_REQUEST_SENSOR_DATA_OR_RECORD_NOT_PRESENT as an
	"ok" error.
	
2008-06-03  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_ctx.c,
	libfreeipmi/src/api/ipmi-api.c: Support 5 argument gethostbyname_r.

2008-06-03  Albert Chu <chu11@llnl.gov>

	* common/src/freeipmi-portability.h,
	common/src/freeipmi-portability.c (freeipmi_gethostbyname_r):
	Change compile rules.  Compile only if known gethostbyname_r isn't
	found.

	* ipmiconsole/src/libipmiconsole/ipmiconsole_ctx.c,
	libfreeipmi/src/api/ipmi-api.c: Call freeipmi_gethostbyname_r
	appropriately.
	
2008-06-03  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/ipmimonitoring/ipmimonitoring.c
	(run_cmd_args): If receive parameters error on
	ipmi_monitoring_bitmask_string() call, assume bogus bitmask
	returned from remote machine.
	
2008-06-03  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/ipmi-sensors-reading.c: Fix compiler warning.
	Fix error return bug.
	
2008-06-03  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/cmds/ipmi-sensor-cmds.c: Make "sensor_state",